chore: update swagger docs (#15)
